[package]
name = "rlagar"
version = "1.0.0"
authors = ["Keith Amling <me@amling2.org>"]
edition = "2018"

[dependencies]
chrono = "=0.4.11"
crossbeam = "=0.7.3"
rand = "=0.6.1"
serde_json = "=1.0.48"
ars_aa = { path = "ars/aa" }
ars_ds = { path = "ars/ds" }
ars_graph = { path = "ars/graph" }

[profile.release]
lto = true
